Connect the Push Notification

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <router-outlet></router-outlet>
 
-<!-- <ng-toast [style]="{ width: '300px', paddingTop: '30px' }"></ng-toast>
 
 
-<input type="text" ngModel id="jobUniqueId" id="jobUniqueId" [(ngModel)]="jobUniqueId">
 
-<button (click)="subscribeToProduct()">Notification vaa daaa </button> -->
+<!-- <input type="text" ngModel id="jobUniqueId" id="jobUniqueId" [(ngModel)]="jobUniqueId"> -->
+
+<!-- <button (click)="subscribeToProduct()">Notification vaa daaa </button> -->
