--- a/src/app/modules/comments/comments.component.scss
+++ b/src/app/modules/comments/comments.component.scss
@@ -610,19 +610,31 @@
     font-size: 20px;
     font-style: normal;
     font-weight: 300;
-    line-height: 36px;
 }
 .kkcmdtx1{
     color: #1C1C1C;
 font-family: "League Spartan";
 font-size: 20px;
 font-style: normal;
-font-weight: 500;
+font-weight: 400;
 }
+
+.commentdateshows{
+    color: #1C1C1C;
+    font-family: "League Spartan";
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    position: absolute;
+    right: 27px;
+}
+
+
 .kkcmdbox1{
     display: flex;
     align-items: center;
     gap: 10px;
+    border-bottom: 1px solid #c8c8c8;
 }
 ul {
     list-style: none;
