--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -29,9 +29,11 @@
           (click)="navigateToProfile('freelancer')">Find Work</button>
         <button class="btn kkelvtxtbtn2" (click)="navigateToProfile('author')">Hire a Talent</button>
       </div>
+     <div class="container">
       <img src="./assets/line.png" class="lineimg1">
       <img src="./assets/Group 109.png" class="lineimg2">
     </div>
+  </div>
   </div>
 
   <div>
