--- a/src/app/modules/profiledetails/profiledetails.component.scss
+++ b/src/app/modules/profiledetails/profiledetails.component.scss
@@ -652,6 +652,7 @@ justify-content: center;
 align-items: center;
 gap: 10px;
 border-radius: 4px;
+float: right;
 background: #A426D1;
 width: 366px;
 }
