--- a/src/app/modules/signup/otp-popup/otp-popup.component.html
+++ b/src/app/modules/signup/otp-popup/otp-popup.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
     <div class="row">
         <div class="col-3">
-            <img src="../assets/Artboard 1 1.png" alt="Pubkin">
+            <img routerLink="/" src="../assets/Artboard 1 1.png" alt="Pubkin">
         </div>
         <div class="col-9">
 
