--- a/src/app/modules/comments/comments.component.html
+++ b/src/app/modules/comments/comments.component.html
@@ -15,13 +15,12 @@
               <p class="kkjbtxtb1">{{jobPost.jobUniqueId}} - {{jobPost.jobTitle}} <br>{{jobPost.description | slice:0:43
                 }}...
               </p>
-              <p class="kkjbtxtb11">Posted at {{ jobPost.createDate}}</p>
+              <p class="kkjbtxtb11">Job Posted at {{ jobPost.postDate}}</p>
               <hr class="kkline1">
             </div>
             <div class="kkjbdiv2">
               <p class="kktxtjbdt1">{{jobPost.description}}</p>
             </div>
-
             <hr class="kkline1">
             <div class="container ">
               <div class="row kkjbdiv3">
@@ -42,8 +41,7 @@
                     <span *ngIf="jobPost.currency === 'AOA'">Kz</span>
                     <span *ngIf="jobPost.currency === 'ARS  '">$</span>
                     <span *ngIf="jobPost.currency === 'OMR'">ر.ع.</span>
-                    <span *ngIf="jobPost.currency === 'SAR'">.س</span> {{jobPost.fromBudget}}-{{jobPost.toBudget}}
-                    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/{{jobPost.rateBasis}}
+                    <span *ngIf="jobPost.currency === 'SAR'">.س</span> {{jobPost.fromBudget}}-{{jobPost.toBudget}} / {{jobPost.rateBasis}}
                   </p>
                 </div>
               </div>
@@ -77,7 +75,7 @@
       </div>
 
     </div>
-
+<!-- List the Comments -->
     <div class="container text-center pb-5">
       <p class="kkjbdls text-start mt-3">Comments</p>
       <div class="kkcmdbx1">
@@ -86,9 +84,11 @@
             <div class="col-8">
               <div class="kkcmdbx2">
                 <ul *ngFor="let comment of comments">
-                  <li class="kkcmdbox1" *ngIf="jobPost.id == comment.jobId">
-                    <p class="kkcmdtx1">{{comment.createdBy}} :</p>
+                  <li class="kkcmdbox1 position-relative" *ngIf="jobPost.id == comment.jobId">
+                    <p class="kkcmdtx1" >{{comment.createdBy}} :</p>
                     <p class=" kkcmdbox kkcmdtx">{{comment.comments}}</p>
+                    <p class="commentdateshows">{{comment.commentDateTime}}</p>
+                    <hr>
                   </li>
                 </ul>
               </div>
@@ -228,7 +228,7 @@
   </div>
 </div>
 
-
+<!-- Comments Form  -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
@@ -238,6 +238,7 @@
           <div class="">
             <input type="hidden" id="dateCreated" name="dateCreated" [(ngModel)]="commentData.dateCreated">
             <input type="hidden" id="id" name="id" [(ngModel)]="commentData.id">
+            <input type="hidden" id="commentDateTime" name="commentDateTime" [(ngModel)]="commentData.commentDateTime">
             <input type="hidden" id="createdBy" name="createdBy" [(ngModel)]="commentData.createdBy">
             <input type="hidden" id="jobId" name="jobId" [(ngModel)]="commentData.jobId">
             <p class="c2" id="exampleModalLabel">Please add your comments</p>
@@ -257,7 +258,7 @@
   </div>
 </div>
 
-
+<!-- Mark as completed Work Modal -->
 <div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel5" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
