--- a/src/app/modules/profiledetails/profiledetails.component.html
+++ b/src/app/modules/profiledetails/profiledetails.component.html
@@ -522,8 +522,8 @@
       <input type="hidden" id="id" name="id" [(ngModel)]="User[0].id">
       <input type="hidden" id="dateLastModified" name="dateLastModified" [(ngModel)]="User[0].dateLastModified">
       <input type="hidden" id="lastModifiedBy" name="lastModifiedBy" [(ngModel)]="User[0].firstName">
-      <input type="hidden" id="hides1 " [(ngModel)]="hides1" [value]="hides1" name="Experience" #Experience="ngModel"
-        [(ngModel)]="User[0].Experience">
+      <input type="hidden" id="experience "  name="experience" #experience="ngModel"
+        [(ngModel)]="User[0].experience">
       <input type="hidden" id="description" [(ngModel)]="User[0].description" [value]="User[0].description"
         name="description" #WrkDesc="ngModel">
       <button class="btn d-none" #submitbutton type="submit" (click)="PercentageSubmit()">Next</button>
@@ -949,7 +949,7 @@
         </div>
         <div class="col-6">
           <form #personalForm="ngForm" (ngSubmit)="onSubmitPersonal(personalForm);onSubmitpercentage(personalForm)">
-            <input type="hidden" id="id" name="id" [(ngModel)]="User[0].id">
+            <input type="text" id="id" name="id" [(ngModel)]="User[0].id">
             <input type="hidden" ngModel name="firstName" #firstName="ngModel" id="firstName"
               [(ngModel)]="User[0].firstName ">
             <input type="hidden" ngModel name="lastName" #lastName="ngModel" id="lastName"
@@ -968,7 +968,7 @@
               [(ngModel)]="User[0].bankingDetails">
             <input type="hidden" ngModel name="paymentVerify" #paymentVerify="ngModel" id="paymentVerify"
               [(ngModel)]="User[0].paymentVerify">
-            <input type="hidden" [value]="selectedSkills.join(', ')" ngModel name="description" #description="ngModel"
+            <input type="text" [value]="selectedSkills.join(', ')" ngModel name="description" #description="ngModel"
               [(ngModel)]="User[0].description" />
             <p class="whatskilled">What are the skills you are looking for?</p>
             <!-- <div style="position: relative;"> <input type="text" class="intsearchauth" placeholder="Enter the skillset">
@@ -1003,7 +1003,7 @@
               #nationality="ngModel" [(ngModel)]="User[0].nationality">
             <p class="disclaimer">*We will not share your information to anyone.</p>
             <button class="btn mat-button saveauth" type="submit" [disabled]="personalForm.invalid"
-              routerLink="/authors">Save</button>
+             >Save</button>
           </form>
         </div>
       </div>
@@ -1066,8 +1066,8 @@
                     </span>
                   </span>
                 </div>
-                <select class="countrySelect govtselect rrcontopalign2" id="country" required name="country"
-                  #country="ngModel" [(ngModel)]="User[0].country" (click)="increaseGovtPercentage()">
+                <select class="countrySelect govtselect rrcontopalign2" id="country"  name="country"
+                  #country="ngModel" [(ngModel)]="User[0].country" >
                   <option selected value="India" style="padding: 20px;">India</option>
                   <option value="USA">USA</option>
                   <option value="Australia">Australia</option>
@@ -1075,8 +1075,8 @@
                   <option value="Canada">Canada</option>
                   <option value="Singapore">Singapore</option>
                 </select>
-                <select class="countrySelect govtselect rrcontopalign2" required id="idType" name="idType"
-                  #idType="ngModel" [(ngModel)]="User[0].idType">
+                <select class="countrySelect govtselect rrcontopalign2"   id="idType" name="idType"
+                  #idType="ngModel" [(ngModel)]="User[0].idType" (click)="increaseGovtPercentage();">
                   <option selected value="Passport"> Passport</option>
                   <option value="PAN card">PAN card</option>
                   <option value="Driver's license">Driver's license</option>
@@ -1107,8 +1107,8 @@
 
     <div class="container ">
       <button class="btn kkempbtn1" routerLink="/authors">Back</button>
-      <button class="btn kkempbtn2" type="submit" [disabled]="govtIdForm.invalid" routerLink="/authors"
-        (click)="govtsubmit();">Save Details</button>
+      <button class="btn kkempbtn2" type="submit" 
+        (click)="govtsubmit();" routerLink="/authors">Save Details</button>
     </div>
   </div>
 
@@ -1116,10 +1116,10 @@
   <div *ngIf="contentName === 'banking-details'">
     <div class="container">
       <div class="row kkbillr">
-        <div class="col-8">
+        <div class="col-4">
           <p class="kkadbilltx">Add Banking Details</p>
         </div>
-        <div class="col 4">
+        <div class="col 8">
           <button class="btn kkadbill" data-bs-toggle="modal" data-bs-target="#exampleModal">Add a New Billing
             Method</button>
         </div>
@@ -1162,7 +1162,6 @@
               <div class="row kkbillr1">
                 <div class="col-8">
                   <div>
-                    <!-- <img *ngIf="bankData.upi ==='Gpay'" src="./assets/visadpt.png"> -->
                     <svg xmlns="http://www.w3.org/2000/svg" *ngIf="bankData.upi === 'Gpay'" height="36" width="46"
                       viewBox="0 0 640 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                       <path
